Fix the issue Amphiluke/handy-scroll#3 with scroll bar invisibility on Mac OS

--- a/src/jquery.floatingscroll.less
+++ b/src/jquery.floatingscroll.less
@@ -1,6 +1,6 @@
 .fl-scrolls {
     bottom:0;
-    height:35px;
+    min-height:17px; // based on https://codepen.io/sambible/post/browser-scrollbar-widths (fixes Amphiluke/handy-scroll#3)
     overflow:auto;
     position:fixed;
 
